@@ -1,3 +1,7 @@
+2/12/2025
+	Fixed some small bugs
+	Added support for pool constraint, which is pretty dumb
+	
 2/6/2025 bis
 	Added support for conditional instance lines and hanging instance clues (like conditional sum, but testing presence of digits matching the criteria instead of the sum of the criteria)
 	Added selection criteria related to digits having consecutive neighbors.
